added the background and text alignment

--- a/pick.html
+++ b/pick.html
@@ -1,8 +1,7 @@
-<!DOCTYPE>
+<!DOCTYPE >
 <html>
-<head>
-</head>
-<body>
-<p>hey</p>
-</body>
+  <head> <title>Pick Pattern</title> </head>
+  <body style= "background-color:orange">
+    <p style="font-size: xx-large;text-align: center;padding-top: 50%;">Welcome to Pick Pattern</p>
+  </body>
 </html>
